fixing horizontal scrollbar issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@ body{
     background-color: black;
     font-family: "Bebas Neue", "Poppins", sans-serif;
     color: white;
-    /* overflow-x: hidden; */
 }
 
 h2 {
@@ -29,7 +28,10 @@ p {
 header {
     width: 100%;
     min-height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../images/background_banner.jpg) ;
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../images/background_banner.jpg) ; */
+    background-image: url(../images/background_banner.jpg);
+    background-color: rgba(0, 0, 0, 0.7);
+    background-blend-mode: darken;
     background-size: cover;
     background-position: center;
     margin-bottom:0;
@@ -43,21 +45,6 @@ nav {
     width: 100%;
     padding: 0 3%;
     /* border: 1px solid #ccc; */
-}
- 
-.section-divider-top-margin {  
-    width: 100%;
-    margin-top: 5px;
-    border-color: black;
-    display: none;
-}
-
-.section-divider-bottom-margin {
-    width: 100%;
-    margin-bottom: 5px;
-    margin-top:0;
-    border-color: black;
-    display: none;
 }
 
 .div-nav-logo{
@@ -75,7 +62,7 @@ nav {
 }
 
 .navbar-items a {
-    width: max-content;
+    /* width: max-content; */
     margin: 8px;
     background-color: rgb(223, 19, 19);
     border-radius: 5px;
@@ -168,6 +155,8 @@ nav {
 
 main {
     background-color: #242222;/* rgb(50, 48, 48);*/
+    width: 100% !important;
+    overflow-x: hidden;
 }
 
 section {
@@ -247,12 +236,12 @@ main span a{
 
         .faq-section {
             border-bottom: 8px solid #222;
+            align-items: center;
         }
 
         .accordion {
             margin: 60px auto;
             width: 100%;
-            /* max-width: 750px; */
         }
 
         .accordion li{
@@ -301,7 +290,7 @@ main span a{
             padding: 30px 20px;
         }
 
-                .accordion input[type="radio"]:checked+label::after {
+        .accordion input[type="radio"]:checked+label::after {
                     transform: rotate(135deg);
                 }
 
@@ -370,7 +359,7 @@ nav {
         }
 
 .banner-text {
-    top: 20%;
+    top: 2%;
 }
 
     
